--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -1,92 +1,143 @@
 .logo-name {
-    font-family: "Pacifico", cursive;
-    font-size: 1.7rem;
-  }
-  .navbar-wrapper {
-    background-color: $white;
-    height: 12vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  .navbar-image {
-    width: 45px;
-    padding: 10px;
-  }
+  font-family: "Pacifico", cursive;
+  font-size: 1.7rem;
+}
+.navbar-wrapper {
+  background-color: $white;
+  height: 12vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.navbar-image {
+  width: 45px;
+  padding: 10px;
   
-  .navbar-image:hover {
-    border-radius: 100%;
-    background-color: #4846d19e;
-    cursor: pointer;
-    transition: background-color 0.6s;
-  }
+}
+.notification-logo{
+  width: 45px;
+  padding: 10px;
+}
+.navbar-image:hover {
+  border-radius: 100%;
+  background-color: #4846d19e;
+  transition: all .6s;
+  cursor: pointer;
   
-  .nav-link-active {
-    border-radius: 100%;
-    background-color: #4846d19e;
-  }
+}
+.notification-logo:hover {
+  border-radius: 100%;
   
-  .logo {
-    cursor: pointer;
-  }
-  
-  .dropdown-menuu {
-    background-color: $white;
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-    margin-top: 30px;
-    animation-name: dropD;
-    animation-duration: 0.6s;
-    opacity: 0;
-    animation-fill-mode: forwards;
-    z-index: 5;
-  }
-  
-  @keyframes dropD {
-    0% {
-    }
-    100% {
-      opacity: 1;
-      margin-top: 50px;
-    }
-  }
-  
-  .dropdown-link {
-    padding: 5px;
-    border-radius: 10px;
-  }
-  
-  .dropdown-link:hover {
-    background-color: $grey;
-    cursor: pointer;
-  }
-  
-  .ntf {
-    width: 250%;
-    height: 45vh;
-    overflow-y: auto;
-  }
+}
 
-  .notify-wrapper{
-    cursor: pointer;
-    border-radius: 100%;
-  }
-  .notify-wrapper:hover{
-    cursor: pointer;
-    border-radius: 100%;
-  }
+.nav-link-active {
+  border-radius: 100%;
+  background-color: #4846d19e;
+}
 
-  .notification-circle{
-    width: 15px;
-    height: 15px;
-    border-radius: 100%;
-    left: 0;
-    top: 10px;
-    background-color: red;
-    color: $white;
-    font-size: 0.7rem;
-    font-weight: normal;
-    cursor: pointer;
+.logo {
+  cursor: pointer;
+}
+
+.dropdown-menuu {
+  background-color: $white;
+  width: 100%;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: 30px;
+  animation-name: dropD;
+  animation-duration: 0.6s;
+  opacity: 0;
+  animation-fill-mode: forwards;
+  z-index: 5;
+}
+
+@keyframes dropD {
+  0% {
   }
+  100% {
+    opacity: 1;
+    margin-top: 50px;
+  }
+}
+
+.dropdown-link {
+  padding: 5px;
+  border-radius: 10px;
+}
+
+
+.ntf {
+  width: 250%;
+  height: 45vh;
+  overflow-y: auto;
+}
+
+.notify-wrapper {
+  cursor: pointer;
+  border-radius: 100%;
+}
+.notify-wrapper:hover {
+  cursor: pointer;
+  border-radius: 100%;
+}
+
+.notification-circle {
+  width: 15px;
+  height: 15px;
+  border-radius: 100%;
+  right: 7px;
+  top: 10px;
+  background-color: red;
+  color: $white;
+  font-size: 0.7rem;
+  font-weight: normal;
+}
+
+.notification-logo-wrapper{
+  
+  border-radius: 100%;
+}
+
+.notification-logo-wrapper:hover{
+  background-color: #4846d19e;
+  transition: all .6s;
+}
+
+.Acceptedresponse-img {
+  width: 18px;
+}
+
+.Ignoredresponse-img {
+  width: 14px;
+}
+
+.accept-ignore-button {
+  border: 0;
+  color: $white;
+  border-radius: 12px;
+  font-size: .8rem;
+  
+}
+
+.accept-button-special {
+  background-color: $purple;
+  
+}
+
+.ignore-button-special {
+  background-color: $white;
+  color: $purple;
+  border: solid 1px ;
+}
+
+.accept-ignore-text{
+  font-size: .8rem;
+}
+
+.notification-line{
+  width: 100%;
+  height: 1px;
+  background-color: #000;
+}
