--- a/src/scss/components/_popup.scss
+++ b/src/scss/components/_popup.scss
@@ -1,68 +1,72 @@
-.popup-wrapper {
-    width: 50%;
-    height: 75vh;
-    transform: translate(50%, 32.66666666666667%);
-    background-color: #fff;
-    border-radius: 25px;
-    box-shadow: rgba(0, 0, 0, 0.65) 0px 5px 15px;
-    animation-name: popup;
-    animation-duration: 0.4s;
-    animation-fill-mode: forwards;
-    animation-timing-function: ease-in-out;
-    opacity: 0;
-  }
-  @keyframes popup {
-    0% {
-    }
-    100% {
-      transform: translate(50%, 16.66666666666667%);
-      opacity: 1;
-    }
-  }
-  
-  .popup-bg {
-    animation-name: pp-bg;
-    animation-duration: .4s;
-    animation-fill-mode: forwards;
-  }
 
-  @keyframes pp-bg{
-    0%{
+@keyframes pp-bg {
+  0% {
+  }
+  100% {
+    backdrop-filter: blur(10px);
+  }
+}
 
-    }
-    100%{
-      backdrop-filter: blur(10px);
-    }
-  }
-  
-  .popup-cross-img {
-    width: 25px;
-    cursor: pointer;
-    z-index: 2;
-  }
+.popup-cross-img {
+  width: 25px;
+  cursor: pointer;
+  z-index: 2;
+}
 
-  .top-content{
-    width: 100%;
-    background: rgb(100,199,255);
-    background: linear-gradient(0deg, rgba(100,199,255,1) 0%, rgba(73,70,209,1) 100%);
-    position:absolute;
-    top: 0;
-    height: 20vh;
-    border-radius: 25px 25px 0px 0px;
-    z-index: 1;
-  }
+.top-content {
+  width: 100%;
+  background: rgb(100, 199, 255);
+  background: linear-gradient(
+    0deg,
+    rgba(100, 199, 255, 1) 0%,
+    rgba(73, 70, 209, 1) 100%
+  );
+  position: absolute;
+  top: 0;
+  height: 20vh;
+  border-radius: 25px 25px 0px 0px;
+  z-index: 1;
+}
 
-  .top-content-line{
-    width: 100%;
-    height: 8px;
-    background-color: $purple;
-  }
+.top-content-line {
+  width: 100%;
+  height: 8px;
+  background-color: $purple;
+}
 
-  .top-content-circle{
-    height: 75px;
-    width: 150px;
-    border-radius: 150px 150px 0 0;
-    background-color: $purple;
-    font-size: 4rem;
-    font-weight: bolder;
+.top-content-circle {
+  height: 75px;
+  width: 150px;
+  border-radius: 150px 150px 0 0;
+  background-color: $purple;
+  font-size: 4rem;
+  font-weight: bolder;
+}
+
+.popup-wrapper2 {
+  animation-name: pp-bg;
+  animation-duration: 0.4s;
+  animation-fill-mode: forwards;
+}
+
+.popup2-content {
+  height: 75vh;
+  border-radius: 25px;
+  box-shadow: rgba(0, 0, 0, 0.65) 0px 5px 15px;
+  background-color: $white;
+  animation-name: popup;
+  animation-duration: 0.4s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease-in-out;
+  opacity: 0;
+  margin-top: 120px;
+}
+
+@keyframes popup {
+  0% {
   }
+  100% {
+    margin-top: 0px;
+    opacity: 1;
+  }
+}
