--- a/src/scss/components/_sendMessageSection.scss
+++ b/src/scss/components/_sendMessageSection.scss
@@ -28,6 +28,8 @@
   width: 40%;
   padding-top: 8px;
   padding-bottom: 8px;
+  padding-left: 50px;
+  padding-right: 50px;
   font-size: 1.5rem;
   font-weight: light;
   border-radius: 25px;
@@ -36,4 +38,5 @@
 
 .sending-message-button-img{
   width: 35px;
+  
 }
