--- a/src/scss/components/_messageRight.scss
+++ b/src/scss/components/_messageRight.scss
@@ -1,7 +1,8 @@
 .message-content-wrapper-right {
-    background-color: #4946d1;
-    color: #fff;
-    border-radius: 24px 0px 24px 24px;
-    font-size: .8rem;
-    font-weight: 400;
-  }
+  width: 25%;
+  background-color: #4946d1;
+  color: #fff;
+  border-radius: 24px 0px 24px 24px;
+  font-size: 0.8rem;
+  font-weight: 400;
+}
