--- a/src/scss/pages/_login.scss
+++ b/src/scss/pages/_login.scss
@@ -24,6 +24,8 @@
   background-color: $purple;
   color: $white;
   border-radius: 45px;
+  font-family: $Inter;
+  font-weight: 300;
 }
 
 .log-register-link{
